# AIme

./: .env.example  .gitignore  pyproject.toml  render.yaml
aime/: config.py  deps.py  main.py
aime/api/: admin.py  auth.py  entity.py  router.py
aime/core/: daily_cycle.py  daily_report.py  entity_mind.py  feed_processor.py  fusion_engine.py  llm.py  memory_layer.py  npc_seeds.py  social_engine.py
aime/models/: __init__.py  base.py  daily_log.py  dialogue.py  entity.py  feed.py  fusion.py  memory.py  player.py  social_event.py
aime/prompts/: daily_log.py  entity_system.py  fusion_eval.py  lun_dao.py  qie_cuo.py
aime/schemas/: dialogue.py  entity.py  feed.py  player.py  social.py  ws.py
aime/utils/: email_sender.py  id_gen.py  text_chunker.py
aime/ws/: commands.py  handler.py  renderer.py
frontend/: admin.html  index.html
frontend/css/: terminal.css
frontend/js/: main.js
scripts/: init_db.py  seed_npcs.py
