[project]
name = "aime"
version = "0.1.0"
description = "AI.me - 念体修炼社交游戏 (AI Cultivation Social Game)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
    "passlib[bcrypt]>=1.7.0",
    "python-jose[cryptography]>=3.3.0",
    "tiktoken>=0.7.0",
    "openai>=1.0.0",
    "bcrypt>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["aime*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
